Fix spacing on follow ups

--- a/src/components/Tree.css
+++ b/src/components/Tree.css
@@ -1,5 +1,6 @@
 .Tree--grouped {
-  margin-bottom: 10px;
+  margin-top: 10px;
+  margin-bottom: 20px;
   margin-left: 20px;
 }
 
@@ -26,10 +27,6 @@
 
 .Tree__group-toggle:hover {
   cursor: pointer;
-}
-
-.Tree__openings[open] .Tree__group-toggle {
-  margin-bottom: 10px;
 }
 
 .Tree__prefix {
